Feat : added open graph tag #51
Signed-off-by: bentshrimp <bent_shrimp@kookmin.ac.kr>

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Best option for open, set, go your open-source project"
+      content="Best option for open your project, set it open-source friendly, and go programming."
     />
+    <!-- preview info when sharing on social network -->
+    <meta property="og:url" content="https://www.open-set-go.com">
+    <meta property="og:title" content="Open-Set-Go">
+    <meta property="og:image" content="%PUBLIC_URL%/lovo.svg">
+    <meta property="og:description" content="Best option for open your project, set it open-source friendly, and go programming.">
+    <meta property="og:site_name" content="Open-Set-Go">
+    <meta property="og:locale" content="en_US">
+    <!-- <meta property="og:image:width" content="1200"> -->
+    <!-- <meta property="og:image:height" content="630"> -->
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
