Fix : og:image src typo error #211
Signed-off-by: bentshrimp <bent_shrimp@kookmin.ac.kr>

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <!-- preview info when sharing on social network -->
     <meta property="og:url" content="https://www.open-set-go.com">
     <meta property="og:title" content="Open-Set-Go">
-    <meta property="og:image" content="%PUBLIC_URL%/lovo.svg">
+    <meta property="og:image" content="%PUBLIC_URL%/logo.svg">
     <meta property="og:description" content="Best option for open your project, set it open-source friendly, and go programming.">
     <meta property="og:site_name" content="Open-Set-Go">
     <meta property="og:locale" content="en_US">
