Update : add open graph meta tags for twitter #211
Signed-off-by: bentshrimp <bent_shrimp@kookmin.ac.kr>

--- a/public/index.html
+++ b/public/index.html
@@ -8,17 +8,24 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Best option for open your project, set it open-source friendly, and go programming."
+      content="Best option to open your project, set it open-source friendly, and go programming."
     />
     <!-- preview info when sharing on social network -->
-    <meta property="og:url" content="https://www.open-set-go.com">
-    <meta property="og:title" content="Open-Set-Go">
-    <meta property="og:image" content="%PUBLIC_URL%/logo.svg">
-    <meta property="og:description" content="Best option for open your project, set it open-source friendly, and go programming.">
-    <meta property="og:site_name" content="Open-Set-Go">
-    <meta property="og:locale" content="en_US">
-    <!-- <meta property="og:image:width" content="1200"> -->
-    <!-- <meta property="og:image:height" content="630"> -->
+    <meta proprety="og:type" content="website"/>
+    <meta property="og:url" content="https://www.open-set-go.com"/>
+    <meta property="og:title" content="Open-Set-Go"/>
+    <meta property="og:image" content="%PUBLIC_URL%/logo.svg"/>
+    <meta property="og:image:width" content="1200"/>
+    <meta property="og:image:height" content="630"/>
+    <meta property="og:description" content="Best option to open your project, set it open-source friendly, and go programming."/>
+    <meta property="og:site_name" content="Open-Set-Go"/>
+    <meta property="og:locale" content="en_US"/>
+    <!-- preview info when sharing on twitter -->
+    <meta name="twitter:card" content="summary"/> 
+    <meta name="twitter:title" content="Open-Set-Go"/> 
+    <meta name="twitter:url" content="https://www.open-set-go.com"/>
+    <meta name="twitter:description" content="Best option to open your project, set it open-source friendly, and go programming." /> 
+    <meta name="twitter:image" content="%PUBLIC_URL%/logo.svg" /> 
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
