Chore : make open graph meta tags neat #211
Signed-off-by: bentshrimp <bent_shrimp@kookmin.ac.kr>

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- HTML Meta Tags -->
     <title>Open-Set-Go</title>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#3E1B6C" />
     <meta
       name="description"
       content="Best option to open your project, set it open-source friendly, and go programming."
@@ -21,11 +22,12 @@
     <meta property="og:site_name" content="Open-Set-Go"/>
     <meta property="og:locale" content="en_US"/>
     <!-- preview info when sharing on twitter -->
-    <meta name="twitter:card" content="summary"/> 
-    <meta name="twitter:title" content="Open-Set-Go"/> 
-    <meta name="twitter:url" content="https://www.open-set-go.com"/>
-    <meta name="twitter:description" content="Best option to open your project, set it open-source friendly, and go programming." /> 
-    <meta name="twitter:image" content="%PUBLIC_URL%/logo.svg" /> 
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="open-set-go.com">
+    <meta property="twitter:url" content="https://www.open-set-go.com">
+    <meta name="twitter:title" content="Open-Set-Go">
+    <meta name="twitter:description" content="Best option to open your project, set it open-source friendly, and go programming.">
+    <meta name="twitter:image" content="https://open-set-go.com/logo.svg">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
